Added fix_core_releases script

--- a/settings.ini
+++ b/settings.ini
@@ -8,6 +8,14 @@ display = true
 ;display = false
 ;limit = 36
 
+[fix_prodji_releases]
+;display = false
+;limit = 36
+
+[fix_core_releases]
+;display = false
+;limit = 36
+
 [remove_blacklist_releases]
 ;display = false
 ;limit = 36
